Building on linux ubuntu